--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -416,33 +416,20 @@ Links:
 - [[https://github.com/SaschaWillems/Vulkan/issues/111][Replace this code at WinMain() to enable memory checks on windows
   builds]]
 
-*** Updates to package                                                :story:
+*** STARTED Code generation of tests for dogen models                 :story:
+    :LOGBOOK:
+    CLOCK: [2019-03-11 Mon 17:17]--[2019-03-11 Mon 17:40] =>  0:23
+    :END:
 
-- shared folder is =dogen= not =masd.dogen=
-- no hello world sample; need json and dia versions
-
-*** Single reporting format option                                    :story:
-
-- use org-mode for tracing and reporting etc
-- byproducts dir does not have =cli=
-
-*** Add tests for tracing and reporting                               :story:
-
-At present its easy to break tracing and reporting without noticing
-it. Add a simple set of tests that verify the existence of the files
-and perform some basic sanity checks on the content.
-
-*** Code generation of tests for dogen models                         :story:
-
-We probably already have a story for this. At present we are manually
-generating tests for each model (serialisation, etc). The structure of
-the tests is very predictable. In a world where tests are a facet, we
-could have some options to control the generation of tests. This would
-also allow end users to generate tests for their models and report the
-results. We would need to generate the utility model for this - or
-perhaps we could code generate tests in a way that no longer requires
-templates - its all "hard-coded". This would make the tests easier to
-follow, but we would generate a lot of code.
+At present we are manually generating tests for each model
+(serialisation, etc). The structure of the tests is very
+predictable. In a world where tests are a facet, we could have some
+options to control the generation of tests. This would also allow end
+users to generate tests for their models and report the results. We
+would need to generate the utility model for this - or perhaps we
+could code generate tests in a way that no longer requires templates -
+its all "hard-coded". This would make the tests easier to follow, but
+we would generate a lot of code.
 
 We could separate dogen specific tests from user tests by naming them
 differently, e.g. =abc_dogen_test.cpp=. We can then create two
@@ -483,6 +470,25 @@ of two approaches:
 If an object has pointers, the canned tests will not perform a deep
 copy of the object. We need to [[*Add%20support%20for%20object%20cloning][implement cloning]] and then use it in
 canned tests.
+
+*** Updates to debian package                                         :story:
+
+There are several problems with the debian package:
+
+- shared folder is =dogen= not =masd.dogen=
+- no hello world sample; need json and dia versions
+- package name is =dogen-applications=, should be masd...
+
+*** Single reporting format option                                    :story:
+
+- use org-mode for tracing and reporting etc
+- byproducts dir does not have =cli=
+
+*** Add tests for tracing and reporting                               :story:
+
+At present its easy to break tracing and reporting without noticing
+it. Add a simple set of tests that verify the existence of the files
+and perform some basic sanity checks on the content.
 
 *** Update metrics in OpenHub                                         :story:
 
@@ -1197,6 +1203,10 @@ behaviour.
 
 This can be implemented as a transform in extracton that executes
 against the managed directories.
+
+Links:
+
+- [[https://www.codeproject.com/Questions/454944/how-to-remove-empty-folders-in-a-directory-using-b][How to remove empty folders in a directory using boost]]
 
 ** Deprecated
 *** CANCELLED Add tests for yarn main workflow                        :story:
