--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -431,7 +431,8 @@ will now be stuck trying to figure out what this is. In reality the
 projects directory for Dogen is always known to CMake. We should just
 set it from CMake.
 
-*** STARTED Clang-cl builds are failing due to memory leak reporting  :story:
+*** COMPLETED Clang-cl builds are failing due to memory leak reporting :story:
+    CLOSED: [2019-03-12 Tue 12:45]
     :LOGBOOK:
     CLOCK: [2019-03-11 Mon 16:23]--[2019-03-11 Mon 17:08] =>  0:45
     :END:
@@ -439,6 +440,10 @@ set it from CMake.
 It seems our clang-cl debug builds are taking longer and longer due to
 some memory leaks. The leaks are showing on MSVC as well. We are not
 always exceeding maximum build time, so sometimes it goes unnoticed.
+
+We've managed to ignore the leaks for now. Once we have cleared up all
+of the valgrind warnings we need to get a windows development
+environment to investigate these properly.
 
 Links:
 
@@ -449,6 +454,7 @@ Links:
 
 *** STARTED Code generation of tests for dogen models                 :story:
     :LOGBOOK:
+    CLOCK: [2019-03-12 Tue 11:56]--[2019-03-12 Tue 12:04] =>  0:08
     CLOCK: [2019-03-12 Tue 11:27]--[2019-03-12 Tue 11:55] =>  0:28
     CLOCK: [2019-03-12 Tue 10:58]--[2019-03-12 Tue 11:26] =>  0:28
     CLOCK: [2019-03-12 Tue 09:27]--[2019-03-12 Tue 10:57] =>  1:30
@@ -515,7 +521,11 @@ If an object has pointers, the canned tests will not perform a deep
 copy of the object. We need to [[*Add%20support%20for%20object%20cloning][implement cloning]] and then use it in
 canned tests.
 
-*** Delete extra files appears broken at present                      :story:
+*** STARTED Delete extra files appears broken at present              :story:
+    :LOGBOOK:
+    CLOCK: [2019-03-12 Tue 15:20]--[2019-03-12 Tue 15:36] =>  0:16
+    CLOCK: [2019-03-12 Tue 12:41]--[2019-03-12 Tue 12:59] =>  0:18
+    :END:
 
 Can't find any evidence of code in extraction to handle the case where
 the flag is set to false.
@@ -526,6 +536,33 @@ Notes:
   ignore, reason user requested not to delete extra files .
 - add test that validates the flag on and off. No need to check the
   deletion itself, we can trust remove files transform.
+
+*** Add tests for tracing, reporting and logging                      :story:
+
+At present its easy to break tracing and reporting without noticing
+it. Add a simple set of tests that verify the existence of the files
+and perform some basic sanity checks on the content.
+
+*** Empty directories should be deleted                               :story:
+
+#+begin_quote
+*Story*: As a dogen user, I want empty directories to be removed so
+that I don't have to do it manually.
+#+end_quote
+
+When housekeeper finishes deleting all extra files, it should check
+all of the processed directories to see if they are empty. If they
+are, it should delete the directory.
+
+We should probably have a command line option to control this
+behaviour.
+
+This can be implemented as a transform in extracton that executes
+against the managed directories.
+
+Links:
+
+- [[https://www.codeproject.com/Questions/454944/how-to-remove-empty-folders-in-a-directory-using-b][How to remove empty folders in a directory using boost]]
 
 *** Formatters have been incorrectly placed under extraction          :story:
 
@@ -615,12 +652,6 @@ There are several problems with the debian package:
 
 - use org-mode for tracing and reporting etc
 - byproducts dir does not have =cli=
-
-*** Add tests for tracing and reporting                               :story:
-
-At present its easy to break tracing and reporting without noticing
-it. Add a simple set of tests that verify the existence of the files
-and perform some basic sanity checks on the content.
 
 *** Update metrics in OpenHub                                         :story:
 
@@ -1317,14 +1348,12 @@ Once we support JSON fully we should go through all of the uses of
 JSON we have at present and replace them with the JSON serialised
 version of the types.
 
-
 *** Add support for decoration configuration overrides                :story:
 
 At present we have hard-coded the decoration configuration to be read
 from the root object only. In an ideal world, we should be able to
 override some of these such as the copyrights. It may not make sense
 to be able to override them all though.
-
 
 *** Copyright holders is scalar when it should be an array            :story:
 
@@ -1342,27 +1371,6 @@ ideally we need a command line argument to dump all fields and their
 descriptions so that users know what's available.
 
 This should be sorted by qualified name.
-
-*** Empty directories should be deleted                               :story:
-
-#+begin_quote
-*Story*: As a dogen user, I want empty directories to be removed so
-that I don't have to do it manually.
-#+end_quote
-
-When housekeeper finishes deleting all extra files, it should check
-all of the processed directories to see if they are empty. If they
-are, it should delete the directory.
-
-We should probably have a command line option to control this
-behaviour.
-
-This can be implemented as a transform in extracton that executes
-against the managed directories.
-
-Links:
-
-- [[https://www.codeproject.com/Questions/454944/how-to-remove-empty-folders-in-a-directory-using-b][How to remove empty folders in a directory using boost]]
 
 ** Deprecated
 *** CANCELLED Add tests for yarn main workflow                        :story:
