--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-12 Tue 18:39]
+#+CAPTION: Clock summary at [2019-03-13 Wed 07:19]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *15:53* |       |      | 100.0 |
+| *Total time*                                             | *16:47* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 15:53   |       |      | 100.0 |
-| Active                                                   |         | 15:53 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 2:22 |  14.9 |
-| Sprint and product backlog grooming                      |         |       | 2:16 |  14.3 |
-| Create a video demo for the sprint's features            |         |       | 3:47 |  23.8 |
+| Stories                                                  | 16:47   |       |      | 100.0 |
+| Active                                                   |         | 16:47 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 2:22 |  14.1 |
+| Sprint and product backlog grooming                      |         |       | 2:16 |  13.5 |
+| Create a video demo for the sprint's features            |         |       | 3:47 |  22.5 |
 | Make projects directory env optional                     |         |       | 0:10 |   1.0 |
-| Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   4.7 |
-| Code generation of tests for dogen models                |         |       | 3:33 |  22.4 |
-| Delete extra files appears broken at present             |         |       | 0:34 |   3.6 |
-| Add tests for tracing, reporting and logging             |         |       | 2:26 |  15.3 |
+| Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   4.5 |
+| Code generation of tests for dogen models                |         |       | 3:33 |  21.2 |
+| Delete extra files appears broken at present             |         |       | 0:34 |   3.4 |
+| Add tests for tracing, reporting and logging             |         |       | 3:20 |  19.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -540,8 +540,11 @@ Notes:
   deletion itself, we can trust remove files transform.
 
 *** STARTED Add tests for tracing, reporting and logging              :story:
-    CLOCK: [2019-03-12 Tue 18:15]--[2019-03-12 Tue 18:38] =>  0:23
+    :LOGBOOK:
+    CLOCK: [2019-03-13 Wed 06:24]--[2019-03-13 Wed 07:18] =>  0:54
     CLOCK: [2019-03-12 Tue 15:37]--[2019-03-12 Tue 17:40] =>  2:03
+    CLOCK: [2019-03-12 Tue 18:15]--[2019-03-12 Tue 18:38] =>  0:23
+    :END:
 
 At present its easy to break tracing and reporting without noticing
 it. Add a simple set of tests that verify the existence of the files
