--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-13 Wed 10:34]
+#+CAPTION: Clock summary at [2019-03-13 Wed 11:59]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *19:02* |       |      | 100.0 |
+| *Total time*                                             | *20:26* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 19:02   |       |      | 100.0 |
-| Active                                                   |         | 19:02 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 2:22 |  12.4 |
-| Sprint and product backlog grooming                      |         |       | 2:16 |  11.9 |
-| Create a video demo for the sprint's features            |         |       | 3:47 |  19.9 |
-| Make projects directory env optional                     |         |       | 0:10 |   0.9 |
-| Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   3.9 |
-| Add tests for tracing, reporting and diffing             |         |       | 5:30 |  28.9 |
-| Code generation of tests for dogen models                |         |       | 3:33 |  18.7 |
-| Delete extra files appears broken at present             |         |       | 0:39 |   3.4 |
+| Stories                                                  | 20:26   |       |      | 100.0 |
+| Active                                                   |         | 20:26 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 2:22 |  11.6 |
+| Sprint and product backlog grooming                      |         |       | 2:16 |  11.1 |
+| Create a video demo for the sprint's features            |         |       | 3:47 |  18.5 |
+| Make projects directory env optional                     |         |       | 0:10 |   0.8 |
+| Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   3.7 |
+| Add tests for tracing, reporting and diffing             |         |       | 5:30 |  26.9 |
+| Code generation of tests for dogen models                |         |       | 3:33 |  17.4 |
+| Delete extra files appears broken at present             |         |       | 2:03 |  10.0 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -540,6 +540,7 @@ canned tests.
 
 *** STARTED Delete extra files appears broken at present              :story:
     :LOGBOOK:
+    CLOCK: [2019-03-13 Wed 10:35]--[2019-03-13 Wed 11:59] =>  1:24
     CLOCK: [2019-03-13 Wed 10:29]--[2019-03-13 Wed 10:34] =>  0:05
     CLOCK: [2019-03-12 Tue 15:20]--[2019-03-12 Tue 15:36] =>  0:16
     CLOCK: [2019-03-12 Tue 12:41]--[2019-03-12 Tue 12:59] =>  0:18
