--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,22 +14,22 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-13 Wed 11:59]
+#+CAPTION: Clock summary at [2019-03-13 Wed 13:31]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *20:26* |       |      | 100.0 |
+| *Total time*                                             | *20:42* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 20:26   |       |      | 100.0 |
-| Active                                                   |         | 20:26 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 2:22 |  11.6 |
-| Sprint and product backlog grooming                      |         |       | 2:16 |  11.1 |
-| Create a video demo for the sprint's features            |         |       | 3:47 |  18.5 |
+| Stories                                                  | 20:42   |       |      | 100.0 |
+| Active                                                   |         | 20:42 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 2:22 |  11.4 |
+| Sprint and product backlog grooming                      |         |       | 2:16 |  11.0 |
+| Create a video demo for the sprint's features            |         |       | 3:47 |  18.3 |
 | Make projects directory env optional                     |         |       | 0:10 |   0.8 |
-| Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   3.7 |
-| Add tests for tracing, reporting and diffing             |         |       | 5:30 |  26.9 |
-| Code generation of tests for dogen models                |         |       | 3:33 |  17.4 |
-| Delete extra files appears broken at present             |         |       | 2:03 |  10.0 |
+| Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   3.6 |
+| Add tests for tracing, reporting and diffing             |         |       | 5:46 |  27.9 |
+| Code generation of tests for dogen models                |         |       | 3:33 |  17.1 |
+| Delete extra files appears broken at present             |         |       | 2:03 |   9.9 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -457,6 +457,7 @@ Links:
 *** COMPLETED Add tests for tracing, reporting and diffing            :story:
     CLOSED: [2019-03-13 Wed 10:03]
     :LOGBOOK:
+    CLOCK: [2019-03-13 Wed 13:15]--[2019-03-13 Wed 13:31] =>  0:16
     CLOCK: [2019-03-13 Wed 10:04]--[2019-03-13 Wed 10:28] =>  0:24
     CLOCK: [2019-03-13 Wed 09:32]--[2019-03-13 Wed 10:03] =>  0:31
     CLOCK: [2019-03-13 Wed 08:10]--[2019-03-13 Wed 09:25] =>  1:15
