--- a/doc/agile/v1/sprint_backlog_13.org
+++ b/doc/agile/v1/sprint_backlog_13.org
@@ -14,23 +14,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-03-14 Thu 09:10]
+#+CAPTION: Clock summary at [2019-03-14 Thu 09:58]
 | <75>                                                     |         |       |      |       |
 | Headline                                                 | Time    |       |      |     % |
 |----------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                             | *27:00* |       |      | 100.0 |
+| *Total time*                                             | *27:47* |       |      | 100.0 |
 |----------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                  | 27:00   |       |      | 100.0 |
-| Active                                                   |         | 27:00 |      | 100.0 |
-| Edit release notes for previous sprint                   |         |       | 2:22 |   8.8 |
-| Sprint and product backlog grooming                      |         |       | 2:16 |   8.4 |
-| Create a video demo for the sprint's features            |         |       | 3:47 |  14.0 |
+| Stories                                                  | 27:47   |       |      | 100.0 |
+| Active                                                   |         | 27:47 |      | 100.0 |
+| Edit release notes for previous sprint                   |         |       | 2:22 |   8.5 |
+| Sprint and product backlog grooming                      |         |       | 2:16 |   8.2 |
+| Create a video demo for the sprint's features            |         |       | 3:47 |  13.6 |
 | Make projects directory env optional                     |         |       | 0:10 |   0.6 |
-| Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   2.8 |
-| Add tests for tracing, reporting and diffing             |         |       | 5:46 |  21.4 |
-| Delete extra files appears broken at present             |         |       | 6:26 |  23.8 |
-| Code generation of tests for dogen models                |         |       | 3:33 |  13.1 |
-| Empty directories should be deleted                      |         |       | 1:55 |   7.1 |
+| Clang-cl builds are failing due to memory leak reporting |         |       | 0:45 |   2.7 |
+| Add tests for tracing, reporting and diffing             |         |       | 5:46 |  20.8 |
+| Delete extra files appears broken at present             |         |       | 6:26 |  23.2 |
+| Code generation of tests for dogen models                |         |       | 3:33 |  12.8 |
+| Empty directories should be deleted                      |         |       | 2:42 |   9.7 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -562,6 +562,7 @@ canned tests.
 
 *** STARTED Empty directories should be deleted                       :story:
     :LOGBOOK:
+    CLOCK: [2019-03-14 Thu 09:11]--[2019-03-14 Thu 09:58] =>  0:47
     CLOCK: [2019-03-14 Thu 08:55]--[2019-03-14 Thu 09:10] =>  0:15
     CLOCK: [2019-03-14 Thu 08:33]--[2019-03-14 Thu 08:54] =>  0:21
     CLOCK: [2019-03-14 Thu 08:02]--[2019-03-14 Thu 08:32] =>  0:30
@@ -622,7 +623,8 @@ need to update these keys.
 
 Notes:
 
-- update extraction_properties in coding model.
+- update extraction_properties in coding model. In fact, move them to
+  the generation model.
 - update most of the extraction keys in JSON and all models.
 
 *** Handcrafted templates                                             :story:
